package updated to 1.1.0

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="col-sm-6 dualListBox">
-    <lib-angular-dual-listbox [sort]="true" [source]="source" key="id" display="name" [(destination)]="confirmed"
-        height="300px" [filter]="true" [disabled]="false"></lib-angular-dual-listbox>
+    <dual-listbox [sort]="true" [source]="source" key="id" display="name" [(destination)]="confirmed"
+        height="300px" [filter]="true" [disabled]="false"></dual-listbox>
 </div>
